--- a/APP/IOS/PointExchange/PointExchange/Base.lproj/HomePage.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Base.lproj/HomePage.storyboard
@@ -1136,6 +1136,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owO-cQ-5TM" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
                                 <rect key="frame" x="8" y="44" width="359" height="599"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="该卡暂无兑换记录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4po-3c-VRm">
+                                        <rect key="frame" x="98" y="287.5" width="163.5" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="D0j-rN-zhZ">
                                         <rect key="frame" x="8" y="16" width="343" height="535"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1154,7 +1160,9 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="4po-3c-VRm" firstAttribute="centerY" secondItem="owO-cQ-5TM" secondAttribute="centerY" id="Dtm-b5-Ze3"/>
                                     <constraint firstItem="D0j-rN-zhZ" firstAttribute="top" secondItem="owO-cQ-5TM" secondAttribute="top" constant="16" id="LZ8-pe-rE4"/>
+                                    <constraint firstItem="4po-3c-VRm" firstAttribute="centerX" secondItem="owO-cQ-5TM" secondAttribute="centerX" id="ZUy-zm-XQD"/>
                                     <constraint firstAttribute="bottom" secondItem="D0j-rN-zhZ" secondAttribute="bottom" constant="48" id="f8a-7m-G8a"/>
                                     <constraint firstItem="D0j-rN-zhZ" firstAttribute="leading" secondItem="owO-cQ-5TM" secondAttribute="leading" constant="8" id="rNh-3I-1RF"/>
                                     <constraint firstAttribute="trailing" secondItem="D0j-rN-zhZ" secondAttribute="trailing" constant="8" id="wCV-k9-TtF"/>
@@ -1181,7 +1189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CYo-qv-PVy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3825" y="-456"/>
+            <point key="canvasLocation" x="3824.8000000000002" y="-456.52173913043481"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="B5p-Vn-CNs">
