--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_login.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_login.xml
@@ -1,90 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/colorWhite"
     >
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_login"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        android:layout_marginBottom="30dp">
-
+        android:paddingTop="50dp">
         <TextView
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
-
-    </android.support.v7.widget.Toolbar>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="登录"
-        android:textSize="34sp" />
+            android:textSize="20sp"/>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="30dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editText_account_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/edit_login"
+            android:id="@+id/editText_account_card_points"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"
             android:ems="14"
             android:inputType="phone"
-            android:hint="请输入账户（电话号码）"/>
+            android:textAlignment="center"
+            android:textColorHint="#CECECE"
+            android:textSize="16sp"
+            android:hint="请输入账户"/>
 
         <EditText
-            android:id="@+id/editText_password_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/edit_login"
+            android:id="@+id/editText_password_card_points"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"
             android:ems="14"
             android:inputType="textPassword"
+            android:textAlignment="center"
+            android:textColorHint="#CECECE"
+            android:textSize="16sp"
             android:hint="请输入密码"/>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+    <Button
+        android:layout_margin="5dp"
+        android:background="@drawable/login_button"
+        android:layout_gravity="center"
+        android:id="@+id/button_login_login"
+        android:layout_width="250dp"
+        android:layout_height="50dp" />
 
-        <Button
-            android:id="@+id/button_login_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-
-            android:backgroundTint="@color/colorOrange"
-            android:text="登录"
-            android:textColor="@color/colorWhite" />
-
-        <Button
+    <RelativeLayout
+        android:layout_margin="5dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:background="#508B8B8B"
+            />
+        <TextView
             android:id="@+id/button_register_login"
+            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:backgroundTint="@color/colorOrange"
-            android:text="注册"
-            android:textColor="@color/colorWhite" />
-    </LinearLayout>
-
-
+            android:text="注 册"
+            android:textColor="#8B8B8B"
+            android:textSize="15sp"
+            />
+        <View
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:background="#508B8B8B"
+            />
+    </RelativeLayout>
 </LinearLayout>
+
