--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_register.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_register.xml
@@ -1,118 +1,238 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/colorWhite"
     >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_register"
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        android:layout_marginBottom="30dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注册"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
-
-    </android.support.v7.widget.Toolbar>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="注册"
-        android:textSize="34sp" />
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
         android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/editText_account_register"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="14"
-            android:inputType="phone"
-            android:hint="请输入电话号码"/>
-
-        <EditText
-            android:id="@+id/editText_password_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="14"
-            android:inputType="textPassword"
-            android:hint="请输入密码"/>
-
-        <EditText
-            android:id="@+id/editText_password_verification"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="14"
-            android:inputType="textPassword"
-            android:hint="请确认密码"/>
+            android:paddingTop="50dp">
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="注册"
+                android:textSize="20sp"/>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="0dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editText_msg_verification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:ems="6"
-                android:inputType="number"
-                android:maxLength="6"
-                android:hint="请输入验证码"/>
+                android:background="@drawable/edit_login"
+                android:id="@+id/editText_phone_card_points"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:ems="14"
+                android:inputType="phone"
+                android:textAlignment="center"
+                android:textColorHint="#CECECE"
+                android:textSize="16sp"
+                android:hint="请输入手机号码"/>
 
-            <Button
-                android:id="@+id/button_get_verification_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:backgroundTint="@color/colorOrange"
-                android:text="获取验证码"
-                android:textColor="@color/colorWhite" />
+            <EditText
+                android:background="@drawable/edit_login"
+                android:id="@+id/editText_msg_card_points"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:ems="14"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#CECECE"
+                android:textSize="16sp"
+                android:hint="请输入短信验证码"/>
+
         </LinearLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-
-
         <Button
-            android:id="@+id/button_register_register"
+            android:layout_gravity="center_horizontal"
+            android:background="@null"
+            android:id="@+id/button_msg_card_points"
+            android:layout_marginBottom="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:backgroundTint="@color/colorOrange"
-            android:text="注册"
-            android:textColor="@color/colorWhite" />
+            android:text="获取验证码"
+            android:textColor="#8B8B8B"
+            android:textSize="18sp"
+            />
+
+        <Button
+            android:layout_margin="5dp"
+            android:background="@drawable/orange_button"
+            android:layout_gravity="center"
+            android:id="@+id/button_next_card_points"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:text="下一步"
+            android:textSize="16sp"
+            android:textColor="@color/colorWhite"/>
+
+        <RelativeLayout
+            android:layout_margin="5dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
+            <View
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_width="100dp"
+                android:layout_height="1dp"
+                android:background="#508B8B8B"
+                />
+            <Button
+                android:id="@+id/button_back_login_card_points"
+                android:background="@null"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="登 录"
+                android:textColor="#8B8B8B"
+                android:textSize="15sp"
+                />
+            <View
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_width="100dp"
+                android:layout_height="1dp"
+                android:background="#508B8B8B"
+                />
+        </RelativeLayout>
     </LinearLayout>
 
 
 </LinearLayout>
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical"-->
+    <!--&gt;-->
+
+    <!--<com.citiexchangeplatform.pointsleague.TitleBar-->
+        <!--android:id="@+id/title_bar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="注册"-->
+            <!--android:layout_marginStart="10dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:textSize="18sp" />-->
+
+
+
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="注册"-->
+        <!--android:textSize="34sp" />-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="10dp"-->
+        <!--android:gravity="center"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/editText_account_register"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:ems="14"-->
+            <!--android:inputType="phone"-->
+            <!--android:hint="请输入电话号码"/>-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/editText_password_register"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:ems="14"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:hint="请输入密码"/>-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/editText_password_verification"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:ems="14"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:hint="请确认密码"/>-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<EditText-->
+                <!--android:id="@+id/editText_msg_verification"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginEnd="10dp"-->
+                <!--android:ems="6"-->
+                <!--android:inputType="number"-->
+                <!--android:maxLength="6"-->
+                <!--android:hint="请输入验证码"/>-->
+
+            <!--<Button-->
+                <!--android:id="@+id/button_get_verification_register"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginStart="10dp"-->
+                <!--android:backgroundTint="@color/colorOrange"-->
+                <!--android:text="获取验证码"-->
+                <!--android:textColor="@color/colorWhite" />-->
+        <!--</LinearLayout>-->
+
+    <!--</LinearLayout>-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:gravity="center"-->
+        <!--android:orientation="horizontal">-->
+
+
+
+        <!--<Button-->
+            <!--android:id="@+id/button_register_register"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="10dp"-->
+            <!--android:backgroundTint="@color/colorOrange"-->
+            <!--android:text="注册"-->
+            <!--android:textColor="@color/colorWhite" />-->
+    <!--</LinearLayout>-->
+
+
+<!--</LinearLayout>-->
