--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_modify_password.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_modify_password.xml
@@ -62,7 +62,7 @@
     <Button
         android:id="@+id/button_modify_password"
         android:layout_margin="5dp"
-        android:background="@drawable/login_button"
+        android:background="@drawable/button_modify_password"
         android:layout_gravity="center"
         android:layout_width="250dp"
         android:layout_height="50dp" />
