修改滑动参数

--- a/APP/Android/PointsLeague/app/src/main/res/layout/content_card_info.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/content_card_info.xml
@@ -17,7 +17,9 @@
         android:background="@drawable/card_info_bg"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:paddingStart="40dp"
         android:paddingEnd="40dp"
         android:paddingTop="50dp"
