--- a/APP/IOS/PointExchange/PointExchange/Discover.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Discover.storyboard
@@ -211,12 +211,6 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7tJ-lj-0vu" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
                                                 <rect key="frame" x="37.5" y="64" width="300" height="163"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyS-lY-agv">
-                                                        <rect key="frame" x="97.5" y="-32" width="105" height="105"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="dyS-lY-agv" secondAttribute="height" multiplier="1:1" id="IY2-LW-KBN"/>
-                                                        </constraints>
-                                                    </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uo7-Js-Wum">
                                                         <rect key="frame" x="124" y="81" width="52.5" height="27"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
@@ -235,6 +229,12 @@
                                                         <color key="textColor" red="0.52156862749999999" green="0.52156862749999999" blue="0.52156862749999999" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyS-lY-agv">
+                                                        <rect key="frame" x="97" y="-32" width="105" height="105"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="dyS-lY-agv" secondAttribute="height" multiplier="1:1" id="IY2-LW-KBN"/>
+                                                        </constraints>
+                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
