--- a/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
+++ b/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
@@ -30,10 +30,10 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66E-9D-dem">
                     <rect key="frame" x="0.0" y="0.0" width="620" height="150"/>
                     <subviews>
-                        <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="6nn-iq-PSa" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
+                        <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="6nn-iq-PSa" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
                             <rect key="frame" x="210" y="6" width="198" height="139"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="8ZQ-9I-MRs">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="8ZQ-9I-MRs">
                                     <rect key="frame" x="-2" y="-6" width="201" height="151"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="8ZQ-9I-MRs" secondAttribute="height" multiplier="218:163" id="Hwx-4R-WuN"/>
@@ -73,10 +73,10 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
-                        <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="zXD-Fz-bBn" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
+                        <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="zXD-Fz-bBn" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
                             <rect key="frame" x="410" y="6" width="198" height="139"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="Hk0-ze-aJW">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="Hk0-ze-aJW">
                                     <rect key="frame" x="-2" y="-6" width="201" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Hk0-ze-aJW" secondAttribute="height" multiplier="218:163" id="QAL-4t-j3y"/>
@@ -116,10 +116,10 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
-                        <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="hJs-6T-qR9" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
+                        <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="hJs-6T-qR9" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
                             <rect key="frame" x="10" y="6" width="198" height="139"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
                                     <rect key="frame" x="-2" y="-6" width="201" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="201" id="Roa-De-Y1z"/>
