--- a/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
+++ b/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,17 +30,17 @@
                     <rect key="frame" x="0.0" y="0.0" width="620" height="150"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="6nn-iq-PSa" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                            <rect key="frame" x="210" y="6" width="198" height="139"/>
+                            <rect key="frame" x="210" y="5.5" width="198" height="139"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="8ZQ-9I-MRs">
-                                    <rect key="frame" x="-2" y="-6" width="201" height="151"/>
+                                    <rect key="frame" x="-1.5" y="-5.5" width="201" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="8ZQ-9I-MRs" secondAttribute="height" multiplier="218:163" id="Hwx-4R-WuN"/>
                                         <constraint firstAttribute="width" constant="201" id="LTr-bt-FLw"/>
                                     </constraints>
                                 </imageView>
                                 <view userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IU0-Tf-EaI">
-                                    <rect key="frame" x="-8" y="-12" width="214" height="162"/>
+                                    <rect key="frame" x="-8" y="-11.5" width="214" height="162"/>
                                     <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="0.17537992296986302" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="214" id="rMC-Ht-ter"/>
@@ -74,17 +73,17 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="zXD-Fz-bBn" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                            <rect key="frame" x="410" y="6" width="198" height="139"/>
+                            <rect key="frame" x="410" y="5.5" width="198" height="139"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="Hk0-ze-aJW">
-                                    <rect key="frame" x="-2" y="-6" width="201" height="150"/>
+                                    <rect key="frame" x="-1.5" y="-5.5" width="201" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Hk0-ze-aJW" secondAttribute="height" multiplier="218:163" id="QAL-4t-j3y"/>
                                         <constraint firstAttribute="width" constant="201" id="Ul7-eA-tqm"/>
                                     </constraints>
                                 </imageView>
                                 <view userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p8r-XT-Od0">
-                                    <rect key="frame" x="-8" y="-12" width="214" height="162"/>
+                                    <rect key="frame" x="-8" y="-11.5" width="214" height="162"/>
                                     <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="0.17537992299999999" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="p8r-XT-Od0" secondAttribute="height" multiplier="107:81" id="3fr-db-IWE"/>
@@ -117,17 +116,17 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view clipsSubviews="YES" contentMode="bottomLeft" translatesAutoresizingMaskIntoConstraints="NO" id="hJs-6T-qR9" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                            <rect key="frame" x="10" y="6" width="198" height="139"/>
+                            <rect key="frame" x="10" y="5.5" width="198" height="139"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
-                                    <rect key="frame" x="-2" y="-6" width="201" height="150"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
+                                    <rect key="frame" x="-1.5" y="-5.5" width="201" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="201" id="Roa-De-Y1z"/>
                                         <constraint firstAttribute="width" secondItem="DNG-9x-19I" secondAttribute="height" multiplier="218:163" id="nfo-Cc-mPi"/>
                                     </constraints>
                                 </imageView>
-                                <view userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1JP-Q2-GXO">
-                                    <rect key="frame" x="-8" y="-12" width="214" height="162"/>
+                                <view userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="1JP-Q2-GXO">
+                                    <rect key="frame" x="-8" y="-11.5" width="214" height="162"/>
                                     <color key="backgroundColor" red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="0.18303189212328766" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="214" id="4KR-NK-PXc"/>
